--- a/index.html
+++ b/index.html
@@ -1,74 +1,54 @@
+<!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AB Ponsot Électricité</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f6f6f6;
-            margin: 0;
-            padding: 0;
-        }
-        header, footer {
-            background-color: #1e1e1e;
-            color: white;
-            text-align: center;
-            padding: 1em;
-        }
-        .container {
-            padding: 2em;
-        }
-        .services {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 1em;
-        }
-        .card {
-            background: white;
-            padding: 1em;
-            border-radius: 8px;
-            flex: 1 1 300px;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>AB Ponsot Électricité</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>AB Ponsot Électricité</h1>
-        <p>Électricité - Chauffage - Alarme - Domotique</p>
-    </header>
-    <div class="container">
-        <section>
-            <h2>Nos Services</h2>
-            <div class="services">
-                <div class="card">
-                    <h3>Installation Électrique</h3>
-                    <p>Installation et mise aux normes de votre réseau électrique.</p>
-                </div>
-                <div class="card">
-                    <h3>Chauffage Électrique</h3>
-                    <p>Pose et maintenance de vos systèmes de chauffage.</p>
-                </div>
-                <div class="card">
-                    <h3>Alarmes</h3>
-                    <p>Sécurisez votre domicile avec nos systèmes d'alarme sur mesure.</p>
-                </div>
-                <div class="card">
-                    <h3>Domotique</h3>
-                    <p>Maison connectée : confort, sécurité, économie d'énergie.</p>
-                </div>
-            </div>
-        </section>
-        <section>
-            <h2>Contact</h2>
-            <p>📞 06 12 34 56 78</p>
-            <p>📧 contact@abponsot-electricite.fr</p>
-            <p>📍 Ferney-Voltaire, 01210</p>
-        </section>
-    </div>
-    <footer>
-        <p>&copy; 2025 AB Ponsot Électricité - Tous droits réservés.</p>
-    </footer>
+  <header>
+    <h1>AB Ponsot Électricité</h1>
+    <nav>
+      <ul>
+        <li><a href="#installation">Installation Électrique</a></li>
+        <li><a href="#chauffage">Chauffage</a></li>
+        <li><a href="#alarme">Alarme</a></li>
+        <li><a href="#domotique">Domotique</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <section id="installation">
+      <h2>Installation Électrique</h2>
+      <img src="https://source.unsplash.com/800x400/?electrician,wires" alt="Installation électrique">
+      <p>Installation et mise aux normes de votre réseau électrique pour tous types de bâtiments.</p>
+    </section>
+    <section id="chauffage">
+      <h2>Chauffage Électrique</h2>
+      <img src="https://source.unsplash.com/800x400/?electric-heater,installation" alt="Chauffage électrique">
+      <p>Pose et maintenance de vos systèmes de chauffage électrique adaptés à votre logement.</p>
+    </section>
+    <section id="alarme">
+      <h2>Alarmes</h2>
+      <img src="https://source.unsplash.com/800x400/?alarm,security" alt="Alarme sécurité">
+      <p>Protégez votre habitation avec nos systèmes d'alarme connectés et performants.</p>
+    </section>
+    <section id="domotique">
+      <h2>Domotique</h2>
+      <img src="https://source.unsplash.com/800x400/?smart-home,automation" alt="Domotique maison connectée">
+      <p>Optez pour une maison intelligente : éclairage, volets, chauffage contrôlés à distance.</p>
+    </section>
+    <section id="contact">
+      <h2>Contact</h2>
+      <p><strong>Téléphone :</strong> 06 12 34 56 78</p>
+      <p><strong>Email :</strong> contact@abponsot-electricite.fr</p>
+      <p><strong>Adresse :</strong> Ferney-Voltaire, 01210</p>
+    </section>
+  </main>
+  <footer>
+    <p>&copy; 2025 AB Ponsot Électricité - Tous droits réservés.</p>
+  </footer>
 </body>
 </html>
