--- a/index.html
+++ b/index.html
@@ -11,40 +11,19 @@
     <h1>AB Ponsot Électricité</h1>
     <nav>
       <ul>
-        <li><a href="#installation">Installation Électrique</a></li>
-        <li><a href="#chauffage">Chauffage</a></li>
-        <li><a href="#alarme">Alarme</a></li>
-        <li><a href="#domotique">Domotique</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="installation.html">Installation Électrique</a></li>
+        <li><a href="chauffage.html">Chauffage</a></li>
+        <li><a href="alarme.html">Alarme</a></li>
+        <li><a href="domotique.html">Domotique</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
   <main>
-    <section id="installation">
-      <h2>Installation Électrique</h2>
-      <img src="https://source.unsplash.com/800x400/?electrician,wires" alt="Installation électrique">
-      <p>Installation et mise aux normes de votre réseau électrique pour tous types de bâtiments.</p>
-    </section>
-    <section id="chauffage">
-      <h2>Chauffage Électrique</h2>
-      <img src="https://source.unsplash.com/800x400/?electric-heater,installation" alt="Chauffage électrique">
-      <p>Pose et maintenance de vos systèmes de chauffage électrique adaptés à votre logement.</p>
-    </section>
-    <section id="alarme">
-      <h2>Alarmes</h2>
-      <img src="https://source.unsplash.com/800x400/?alarm,security" alt="Alarme sécurité">
-      <p>Protégez votre habitation avec nos systèmes d'alarme connectés et performants.</p>
-    </section>
-    <section id="domotique">
-      <h2>Domotique</h2>
-      <img src="https://source.unsplash.com/800x400/?smart-home,automation" alt="Domotique maison connectée">
-      <p>Optez pour une maison intelligente : éclairage, volets, chauffage contrôlés à distance.</p>
-    </section>
-    <section id="contact">
-      <h2>Contact</h2>
-      <p><strong>Téléphone :</strong> 06 12 34 56 78</p>
-      <p><strong>Email :</strong> contact@abponsot-electricite.fr</p>
-      <p><strong>Adresse :</strong> Ferney-Voltaire, 01210</p>
+    <section>
+      <h2>Bienvenue sur AB Ponsot Électricité</h2>
+      <p>Électricien basé à Ferney-Voltaire, spécialisé en installation, domotique, sécurité et confort électrique moderne.</p>
+      <img src="https://source.unsplash.com/800x400/?electrician,tools" alt="Bienvenue">
     </section>
   </main>
   <footer>
